fixed p e spacing

--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ body {
 	/*font-family: apercu;*/
 	/*-webkit-font-smoothing: antialiased;*/
 	text-rendering: optimizeLegibility;
+	etter-spacing: 0.06px;
     
 }
 
